syntax = "proto3";
package felix;
option go_package = "proto";

import "felixbackend.proto";

service PolicySync {

    // On this API, only the following payloads will be sent:
    //  - InSync
    //  - IPSetUpdate
    //  - IPSetDeltaUpdate
    //  - IPSetRemove
    //  - ActiveProfileUpdate
    //  - ActiveProfileRemove
    //  - ActivePolicyUpdate
    //  - ActivePolicyRemove
    //  - WorkloadEndpointUpdate
    //  - WorkloadEndpointRemove
    rpc Sync(SyncRequest) returns (stream ToDataplane);
}

message SyncRequest {
}
