syntax = "proto3";

package mgmtintf.v1;

import "google/rpc/status.proto";


service NodeAgentMgmt {
        rpc WorkloadAdded(WorkloadInfo) returns (Response);
        rpc WorkloadDeleted(WorkloadInfo) returns (Response);
}

message Response {
        google.rpc.Status status = 1;
}

message WorkloadInfo {
        message WorkloadAttributes {
          // uid: Unique Id of the Workload.
          // During delete the uid is mandatory others are optional
          string uid = 1;
          // workload identifier aka name.
          string workload = 2;
          // namespace of the workload.
          string namespace = 3;
          // service account of the workload.
          string serviceaccount = 4;
        }

        WorkloadAttributes attrs = 1;
        // workloadpath is where the Flexvolume driver has created the volume specific for
        // the workload. The node agent will use this directory for this workload.
        string workloadpath = 2;
}
